# rustomword-rs

./: .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  app.json
src/: api.rs  db.rs  entry.rs  main.rs  schema.rs
src/api/: mod.rs
src/db/: mod.rs
static/css/: skeleton.css  style.css
static/errors/: 400.html  404.html  500.html
templates/: index.html.tera
